# hw1

./: CMakeLists.txt  README.md
code/functions/: add.c  create_list.c  delete.c  get.c  main.c  menu.c  print.c  sort.c
code/headers/: global_arr.h  headers.h
code/tests/: test_app.cpp
